# sucodo

./: LICENSE  default.nix  sample.txt  shell.nix  sucodo.cabal  sucodo.nix  sucodu.nix
app/: Grid.hs  Main.hs  Puzzle.hs
