cabal-version: 2.4
name:          sucodo
version:       0.1.0.0
author:        Jesse Holzman
description:   A comonadic sudoku solver
license:       BSD-3-Clause
license-file:  LICENSE

executable sucodo
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:
    Grid
    Puzzle
  default-language: Haskell2010
  build-depends:
    , base     ^>=4.14.1.0
    , comonad
    , matrix
    , vector
    , optparse-applicative
